# mem0_benchmark

./: .gitignore  INSTALL.md  PACKAGE_FILES.txt  README.md  SETUP_GUIDE.md  check_setup.sh  full_benchmark.sh  full_benchmark_locomo.sh  full_benchmark_locomo_test.sh  full_benchmark_longmemeval.sh  generation_evaluator.py  manage_services.sh  mem0_full_pipeline.py  mem0_parallel_index.py  mem0_process_index.py  mem0_process_retrieve.py  preflight_check.sh  pyproject.toml  quick_test.sh  requirements.txt  retrieval_evaluator.py  setup.sh
benchmark/: generation_evaluator.py  gpt4score_evaluator.py  mem0_full_pipeline.py  mem0_parallel_index.py  mem0_process_index.py  mem0_process_retrieve.py  retrieval_evaluator.py  run_gpt4score_eval.sh
mem0/embeddings/: huggingface.py
mem0/memory/: main.py  utils.py
results/test_memory_20251210_171928/: index_metadata_0.json
results/test_memory_20251210_171928/conv-30/: chroma.sqlite3
results/test_memory_20251210_171928/conv-49/: chroma.sqlite3
results/test_memory_20251210_172540/conv-26/: chroma.sqlite3
results/test_memory_20251210_180913/: index_metadata_0.json
results/test_memory_db/: chroma.sqlite3
results/test_memory_pipeline/conv-26/: chroma.sqlite3
results/test_results_20251210_180913/: generation_eval_20251210_180913.json  pipeline_metadata_20251210_180913.json  retrieval_eval_20251210_180913.json  retrieval_results_20251210_180913.json
scripts/: check_evidence_source.py  debug_contriever.py  debug_embedder.py  download_dataset.py  test_config.py  test_mem0_llm.py  test_openai_direct.py
(+5 files in other folders)
