[project]
name = "mem0ai"
version = "1.0.1"
description = "Mem0 - Memory system with benchmark suite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mem0 Team", email = "support@mem0.ai"}
]

dependencies = [
    # Core
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Vector stores
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    
    # Neo4j Graph support
    "langchain-neo4j>=0.8.0",
    "neo4j>=6.0.0",
    "rank-bm25>=0.2.2",
    
    # Embeddings
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    
    # Evaluation
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.0",
    "bert-score>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

benchmark = [
    "huggingface-hub>=0.20.0",
]

all = [
    "mem0ai[dev,benchmark]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mem0"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
